--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h1 {
   /* position: absolute; */
   /* top: 65%; */
   /* right: 50rem; */
-  margin: 0 auto;
+  margin: 2rem auto;
   /* align-self: center;
   text-align: center; */
 }
