--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 }
 
 html {
-  font-size: 62.5%;
-  box-sizing: border-box;
+  font-size: 60%;
 }
 
 body {
@@ -37,7 +36,10 @@ header {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-
+  /* background-image: url(images/mossheader.png); */
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 main {
@@ -47,35 +49,26 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-    width: 70%;
+  width: 70%;
   /* border:3px white solid; */
 }
 
-.left {
-  width: 52rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 5px;
-}
-.left button, .right button {
-    border-radius: 5px;
 
-}
+.left,
 .right {
   width: 52rem;
   font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  /* border:3px solid white; */
 }
 
 /* ELEMENTS STYLE */
 h1 {
   font-size: 4rem;
   text-align: center;
-  /* position: absolute; */
-  width: 100%;
-  /* top: 32%;
-  left: 50%; */
-  /* transform: translate(-50%, -50%); */
 }
 
 .number {
@@ -97,10 +90,6 @@ h1 {
   margin-bottom: 5rem;
   text-align: center;
   border: 4px solid #eee;
-
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-end; */
 }
 
 .between {
@@ -108,17 +97,13 @@ h1 {
   margin-bottom: 2rem;
   padding: 4rem;
   border-radius: 5px;
-
   border: 4px solid #eee;
 }
 
 .again {
-  /* position: absolute; */
-  /* top: 65%; */
-  /* right: 50rem; */
-  margin: 2rem auto;
-  /* align-self: center;
-  text-align: center; */
+  margin-top: 2rem;
+   align-self: center;
+  text-align: center;  
 }
 
 .guess {
@@ -155,6 +140,6 @@ h1 {
 }
 
 .label-score {
-  /* margin-bottom: 2rem; */
+  margin-bottom: 2rem;
 }
 
