--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 header {
   /* position: relative; */
   /* background-color: #0F7303; */
-  height: 35vh;
+  height: 50vh;
   width: 70%;
   /* border-bottom: 7px solid #eee; */
   display: flex;
@@ -69,6 +69,7 @@ main {
 h1 {
   font-size: 4rem;
   text-align: center;
+  padding: 4rem;
 }
 
 .number {
@@ -83,10 +84,6 @@ h1 {
   border: 1px solid #eee;
   padding: 3rem 0rem;
   text-align: center;
-  position: absolute;
-  bottom: 62.5%;
-  left: 50%;
-  transform: translate(-50%, 50%);
   margin-bottom: 5rem;
   text-align: center;
   border: 4px solid #eee;
@@ -102,8 +99,8 @@ h1 {
 
 .again {
   margin-top: 2rem;
-   align-self: center;
   text-align: center;  
+  margin-bottom: 2rem;
 }
 
 .guess {
@@ -128,6 +125,7 @@ h1 {
   font-family: inherit;
   padding: 2rem 2rem;
   cursor: pointer;
+  margin-bottom: 2rem;
 }
 
 .btn:hover {
