--- a/style.css
+++ b/style.css
@@ -140,6 +140,8 @@ h1 {
   margin-bottom: 2rem;
 }
 
+
+/******************MEDIAQUERY******************/
 @media (max-width: 600px) {
 html {
   font-size: 45%;
@@ -156,8 +158,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  line-height: 1.3;
-  letter-spacing: 2px;
 }
 
 /* LAYOUT */
@@ -232,7 +232,8 @@ h1 {
   border-radius: 5px;
   border: 4px solid #eee;
   width:70%;
-  letter-spacing: 1px;
+  line-height: 1.5;
+  letter-spacing: 2px;
 }
 
 .again {
