--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ body {
 header {
   /* position: relative; */
   /* background-color: #0F7303; */
-  height: 35vh;
+  height: 150px;
   width: 100%;
   /* border-bottom: 7px solid #eee; */
   display: flex;
@@ -202,11 +202,10 @@ main {
 
 /* ELEMENTS STYLE */
 h1 {
-  margin-top: 3rem;
-  font-size: 2rem;
+  margin-top: 6rem;
+  font-size: 1.7rem;
   text-align: center;
-  margin-top: 4rem;
-  height: 10vh;
+  height: 100%;
 }
 
 .number {
@@ -228,7 +227,7 @@ h1 {
 }
 
 .between {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   margin-bottom: 1.5rem;
   padding: 3rem;
   border-radius: 5px;
